objects/ssot__IndicatorAssignment__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Indicator Assignment Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndicatorAssignmentStatus__c</fullName>
        <label>Status</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndicatorAssignmentType__c</fullName>
        <label>Indicator Assignment Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IndicatorDefinitionId__c</fullName>
        <label>Indicator Definition</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IntendedDirection__c</fullName>
        <label>Intended Direction</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutcomeIntentId__c</fullName>
        <label>Outcome Intent</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramId__c</fullName>
        <label>Program</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716668778828_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IndicatorAssignment_ProgramId_map_Pr_rel</label>
        <referenceTo>ssot__Program__dlm</referenceTo>
        <relationshipLabel>IndicatorAssignment_ProgramId_map_Pr_rel</relationshipLabel>
        <relationshipName>rel_1716668778828_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716670497261_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IndicatorAssignment_OutcomeIntentId__rel</label>
        <referenceTo>ssot__OutcomeIntent__dlm</referenceTo>
        <relationshipLabel>IndicatorAssignment_OutcomeIntentId__rel</relationshipLabel>
        <relationshipName>rel_1716670497261_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716726571599_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IndicatorAssignment_IndicatorDefinit_rel</label>
        <referenceTo>ssot__IndicatorDefinition__dlm</referenceTo>
        <relationshipLabel>IndicatorAssignment_IndicatorDefinit_rel</relationshipLabel>
        <relationshipName>rel_1716726571599_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>